--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,19 @@
 html,
 body {
+  font-size: 62.5%;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Noto Serif", serif;
+}
+
+h2 {
+  font-family: "Noto Sans Display", sans-serif;
+  font-weight: 600;
+}
+
+h3 {
+  font-family: "Noto Sans", sans-serif;
+  font-weight: 600;
 }
 
 a {
