--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,14 @@
 .container {
   padding: 0 3rem;
   background: linear-gradient(180deg, #050505 0%, #141414 53.65%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main {
   min-height: 100vh;
+  max-width: 80rem;
   padding: 0;
   flex: 1;
   display: flex;
