--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -24,6 +24,8 @@
   border-radius: 10px;
   outline: 2px solid #0008;
   outline-offset: -2px;
+  max-width: 40rem;
+  height: auto;
 }
 
 .photo_container {
