--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -3,7 +3,7 @@
   /* padding: 0; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   gap: 6rem;
   background-color: var(--color-background);
@@ -12,6 +12,7 @@
 .hero {
   min-height: 70vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 4rem;
   padding-top: 10rem;
@@ -28,35 +29,70 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  align-items: center;
+}
+.hero_content p {
+  margin-top: 1rem;
 }
 
 .about {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 1rem;
 }
 
-.photo {
+.photobox {
+  max-width: 35rem;
   width: 100%;
   height: auto;
-  border-radius: 5px;
+}
+
+.photo {
+  border-radius: var(--border-radius);
+  
 }
 .copy {
-  border: 1px solid black;
   padding: 1rem;
-  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem
+  ;
 }
+
+.servicebuttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+
+.servicedescription {
+  min-height: 10rem;
+  margin-bottom: 1rem;
+}
+
 .services {
   display: grid;
   gap: 1rem;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+  min-height: 30vh;
+  margin: 2rem 0;
 }
+
+
 .service {
-  border: 1px solid black;
-  /* margin-top: 3rem; */
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  border: 1px solid var(--color-text);
   padding: 1rem;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
+
+.servicetime {
+  margin-top: auto;
+}
+
 .service h4 {
   margin: 0;
   padding-bottom: .5rem;
@@ -66,9 +102,17 @@
 
 
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@media (min-width: 500px) {
+  .about {
+    grid-template-columns: 1fr 1fr;
+  }
+  .services {
+    grid-template-columns: 1fr 1fr;
+  }
+  .hero {
+    flex-direction: row;
+  }
+  .hero_content {
+    align-items: flex-start;
   }
 }
