fix merge issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,7 +70,7 @@ a {
   text-decoration: none;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --color-background: black;
     --color-text: whitesmoke;
@@ -79,4 +79,4 @@ a {
   html {
     color-scheme: dark;
   }
-} */
+}
