--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-  border-top: 1px solid black;
+  border-top: 1px solid var(--color-text);
   width: 100%;
   display: flex;
   flex-direction: column;
