--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,13 @@
 :root {
   --color-background: #eff5f1;
-  --color-text: #252525;
+  --color-text: #121212;
   --color-primary: #9d5304;
   --border-radius: 5px;
+}
+
+body {
+  background-color: var(--color-background);
+  color: var(--color-text);
 }
 
 .container {
@@ -72,7 +77,7 @@ a {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: #252525;
+    --color-background: #121212;
     --color-text: #eff5f1;
     --color-primary: #dd8c34;
   }
