--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,14 +1,9 @@
-.container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
 .content {
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
+  padding-top: 2rem;
 }
 
 .content p {
