--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -3,19 +3,23 @@
   /* padding: 0; */
   display: flex;
   flex-direction: column;
+  position: relative;
   /* justify-content: center; */
   align-items: center;
-  gap: 6rem;
   background-color: var(--color-background);
 }
 
+.hero_art {
+  position: absolute;
+}
+
 .hero {
-  min-height: 70vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 4rem;
-  padding-top: 10rem;
+  /* padding-top: 10rem; */
   /* flex-direction: column; */
   /* justify-content: center; */
 }
@@ -36,9 +40,14 @@
 }
 
 .about {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
+  margin-top: -10vh; 
+
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+
+  }
 }
 
 .photo {
