--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -1,4 +1,3 @@
-
 .main {
   /* padding: 0; */
   // width: 100%;
@@ -10,20 +9,25 @@
   // background-color: var(--color-background);
 }
 
-
 .hero {
-  background: linear-gradient(-75deg, #00000000, #00000000 20%, var(--hero-stripe-color) 25%, var(--hero-stripe-color) 55%, #00000000 60%);
+  background: linear-gradient(
+    -75deg,
+    #00000000,
+    #00000000 20%,
+    var(--hero-stripe-color) 25%,
+    var(--hero-stripe-color) 55%,
+    #00000000 60%
+  );
   background-attachment: fixed;
-  
+
   &__container {
     min-height: 95vh;
     padding-bottom: 10vh;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
-    gap: 4rem;
-
+    gap: 3rem;
   }
 
   &_logo {
@@ -36,100 +40,87 @@
     flex-direction: column;
     gap: 2rem;
     align-items: center;
+    letter-spacing: 0.0625rem;
   }
   &_content p {
     margin-top: 1rem;
   }
-
 }
 
-
-
 .about {
-  margin-top: -15vh; 
-
+  margin-top: -15vh;
+  width: 100%;
   &__content {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
-
   }
-}
-
-.photo {
-  border-radius: var(--border-radius);
-  width: 100%;
-  height: auto;
-  
-}
-.copy {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem
-  ;
-}
-
-.services {
-  margin-top: 6rem;
-}
-
-.servicebuttons {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  margin: 1rem 0;
-}
-
-.servicedescription {
-  min-height: 10rem;
-  margin-bottom: 1rem;
-}
-
-.services__list {
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: 1fr;
-  min-height: 30vh;
-  margin: 2rem 0;
+  &__photo {
+    border-radius: var(--border-radius);
+    width: 100%;
+    height: auto;
+  }
+  &__copy {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 
 .service {
-  display: flex;
-  flex-direction: column;
-  gap: .5rem;
-  border: 1px solid var(--color-text);
-  padding: 1rem;
-  border-radius: var(--border-radius);
+  margin-top: 6rem;
+  &__buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1rem 0;
+  }
+  
+  &__description {
+    min-height: 10rem;
+    margin-bottom: 1rem;
+  }
+  &__list {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    min-height: 30vh;
+    margin: 2rem 0;
+  }
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    border: 1px solid var(--color-text);
+    padding: 1rem;
+    border-radius: var(--border-radius);
+  }
+  &__time {
+    margin-top: auto;
+  }
+  h4 {
+   margin: 0;
+   padding-bottom: 0.5rem;
+   font-size: 2rem;
+  }
 }
 
-.servicetime {
-  margin-top: auto;
-}
-
-.service h4 {
-  margin: 0;
-  padding-bottom: .5rem;
-  font-size: 2rem;
-}
 
 .contact {
   margin-top: 6rem;
 }
 
-
-
 @media (min-width: 500px) {
-  
   .about__content {
     grid-template-columns: 1fr 1fr;
   }
-  .services {
+  .service__list {
     grid-template-columns: 1fr 1fr;
   }
   .hero__container {
-    flex-direction: row;
+    grid-template-columns: 1fr 1.1fr;
   }
   .hero_content {
     align-items: flex-start;
