--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -10,46 +10,57 @@
 }
 
 .hero {
-  background: linear-gradient(
-    -75deg,
-    #00000000,
-    #00000000 20%,
-    var(--hero-stripe-color) 25%,
-    var(--hero-stripe-color) 55%,
-    #00000000 60%
-  );
+  background: var(--hero-background)
+    linear-gradient(
+      -75deg,
+      #00000000,
+      #00000000 20%,
+      var(--hero-stripe-color) 25%,
+      var(--hero-stripe-color) 55%,
+      #00000000 60%
+    );
+
   background-attachment: fixed;
+  color: var(--hero-text);
 
   &__container {
-    min-height: 95vh;
+    min-height: 100vh;
+    padding-top: 2rem;
     padding-bottom: 10vh;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
     gap: 3rem;
   }
 
-  &_logo {
-    fill: var(--color-text);
+  &__logo {
+    fill: var(--hero-text);
     width: 100%;
+    align-self: end;
   }
-  &_content {
-    display: flex;
-    font-size: 2.2rem;
-    flex-direction: column;
+  &__content {
+    display: grid;
+    text-align: center;
+    justify-items: center;
     gap: 2rem;
-    align-items: center;
     letter-spacing: 0.0625rem;
-  }
-  &_content p {
-    margin-top: 1rem;
+    p {
+      font-size: 2rem;
+    }
+    h1 {
+      margin-top: 0.2rem;
+      margin-bottom: 0.6rem;
+      font-size: 2.8rem;
+    }
   }
 }
 
 .about {
   margin-top: -15vh;
+  padding-top: 1rem;
   width: 100%;
+
   &__content {
     display: grid;
     grid-template-columns: 1fr;
@@ -68,7 +79,6 @@
   }
 }
 
-
 .service {
   margin-top: 6rem;
   &__buttons {
@@ -77,7 +87,7 @@
     gap: 1rem;
     margin: 1rem 0;
   }
-  
+
   &__description {
     min-height: 10rem;
     margin-bottom: 1rem;
@@ -101,12 +111,11 @@
     margin-top: auto;
   }
   h4 {
-   margin: 0;
-   padding-bottom: 0.5rem;
-   font-size: 2rem;
+    margin: 0;
+    padding-bottom: 0.5rem;
+    font-size: 2rem;
   }
 }
-
 
 .contact {
   margin-top: 6rem;
@@ -122,7 +131,20 @@
   .hero__container {
     grid-template-columns: 1fr 1.1fr;
   }
-  .hero_content {
-    align-items: flex-start;
+  .hero__content {
+    text-align: unset;
+    justify-items: unset;
   }
+  .hero__logo {
+    align-self: unset;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .about {
+    margin-top: -5vh;
+
+    background: linear-gradient(to bottom, #00000000, var(--color-background) 5%);
+  }
+
 }
