--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -25,41 +25,48 @@
 
   &__container {
     min-height: 100vh;
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-bottom: 10vh;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
     justify-items: center;
-    gap: 3rem;
+    gap: 2rem;
   }
 
   &__logo {
     fill: var(--hero-text);
     width: 100%;
     align-self: end;
+    animation: fillColors 20s linear 1s infinite;
   }
   &__content {
     display: grid;
     text-align: center;
     justify-items: center;
-    gap: 2rem;
+    gap: 1rem;
     letter-spacing: 0.0625rem;
     p {
-      font-size: 2rem;
+      font-size: 1.5rem;
     }
     h1 {
       margin-top: 0.2rem;
       margin-bottom: 0.6rem;
-      font-size: 2.8rem;
+      font-size: 1.8rem;
     }
   }
 }
 
 .about {
-  margin-top: -15vh;
+  margin-top: -13vh;
   padding-top: 1rem;
   width: 100%;
+  background: linear-gradient(
+    to bottom,
+    #00000000,
+    #00000000 12%,
+    var(--color-background) 20%
+  );
 
   &__content {
     display: grid;
@@ -80,7 +87,7 @@
 }
 
 .service {
-  margin-top: 6rem;
+  margin-top: 3rem;
   &__buttons {
     display: flex;
     flex-wrap: wrap;
@@ -118,7 +125,7 @@
 }
 
 .contact {
-  margin-top: 6rem;
+  margin-top: 4rem;
 }
 
 @media (min-width: 500px) {
@@ -144,7 +151,27 @@
   .about {
     margin-top: -5vh;
 
-    background: linear-gradient(to bottom, #00000000, var(--color-background) 5%);
+    background: linear-gradient(
+      to bottom,
+      #00000000,
+      #00000000 4%,
+      var(--color-background) 8%
+    );
   }
+}
 
+@keyframes fillColors {
+  0%,
+  100% {
+    fill: var(--hero-text);
+  }
+  25% {
+    fill: var(--color-secondary);
+  }
+  50% {
+    fill: var(--hero-text);
+  }
+  75% {
+    fill: var(--color-primary);
+  }
 }
