--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: 'Inter Variable', sans-serif;
+@layer base {
+	html {
+		font-family: 'Nunito Variable', sans-serif;
+	}
 }
