--- a/src/app.css
+++ b/src/app.css
@@ -29,4 +29,7 @@
 	.btn {
 		@apply inline-block font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-amber-700 sm:bg-amber-600 opacity-100 text-white rounded;
 	}
+	.btn-secondary {
+		@apply inline-block font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-cyan-700 sm:bg-cyan-600 opacity-100 text-white rounded;
+	}
 }
