--- a/src/app.css
+++ b/src/app.css
@@ -27,9 +27,9 @@
 		@apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600;
 	}
 	.btn {
-		@apply inline-block font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-amber-700 sm:bg-amber-600 opacity-100 text-white rounded;
+		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-amber-700 sm:bg-amber-600 opacity-100 text-white rounded;
 	}
 	.btn-secondary {
-		@apply inline-block font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-cyan-700 sm:bg-cyan-600 opacity-100 text-white rounded;
+		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-cyan-700 sm:bg-cyan-600 opacity-100 text-white rounded;
 	}
 }
