--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,18 @@
 	}
 }
 
+@layer components {
+	.link {
+		@apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600;
+	}
+	.btn {
+		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-amber-700 sm:bg-amber-600 opacity-100 text-white rounded transition sm:hover:scale-105;
+	}
+	.btn-secondary {
+		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-cyan-700 sm:bg-cyan-600 opacity-100 text-white rounded transition sm:hover:scale-105;
+	}
+}
+
 @layer utilities {
 	/* For Webkit-based browsers (Chrome, Safari and Opera) */
 	.scrollbar-hide::-webkit-scrollbar {
@@ -19,14 +31,5 @@
 	.scrollbar-hide {
 		-ms-overflow-style: none; /* IE and Edge */
 		scrollbar-width: none; /* Firefox */
-	}
-	.link {
-		@apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600;
-	}
-	.btn {
-		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-amber-700 sm:bg-amber-600 opacity-100 text-white rounded transition sm:hover:scale-105;
-	}
-	.btn-secondary {
-		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-cyan-700 sm:bg-cyan-600 opacity-100 text-white rounded transition sm:hover:scale-105;
 	}
 }
