--- a/src/app.css
+++ b/src/app.css
@@ -15,7 +15,7 @@
 		@apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600;
 	}
 	.btn {
-		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-amber-700 sm:bg-amber-600 opacity-100 text-white rounded transition sm:hover:scale-105;
+		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-lime-700 sm:bg-lime-600 opacity-100 text-white rounded transition sm:hover:scale-105;
 	}
 	.btn-secondary {
 		@apply flex items-center w-fit gap-2 font-extrabold sm:font-semibold text-sm sm:text-lg px-2 sm:px-4 py-1 bg-cyan-700 sm:bg-cyan-600 opacity-100 text-white rounded transition sm:hover:scale-105;
